// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should counter increment 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Increment
  </button>
</div>
`;

exports[`ProductCard should show the component 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
